styling and bug squash

--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -26,6 +26,10 @@
   border: none;
 }
 
+.comment-field input:focus{
+  outline: none;
+}
+
 .comment-field form > div{
   color: #65676b;
   font-size: 12px;
