--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -52,9 +52,9 @@
 
 .post-item-box {
   font-size: 15px;
-  margin: 5px 0 5px 0;
+  margin: 20px 0;
   border-radius: 6px;
-  box-shadow: 0 1px 2px var(--shadow-2);
+  box-shadow: 0 1px 2px #c4c4c4;
   background-color: #FFF;
 }
 
