--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -42,7 +42,7 @@
 }
 
 .empty-profile-banner{
-  background-color: inherit;
+  background-color: #f0f2f5;
   height: 100%;
   max-width: 1250px;
   max-height: 463px;
@@ -89,6 +89,7 @@
 
 .user-posts{
   max-width: 680px;
+  margin: auto;
 }
 
 #profile-picture{
